// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`utils > getFolders > should be able to return the correct folders when method options are provided 1`] = `
{
  "actualFolder": "methodActual",
  "baselineFolder": "methodBase",
  "diffFolder": "methodDiff",
}
`;

exports[`utils > getFolders > should be able to return the correct folders when no method options are provided 1`] = `
{
  "actualFolder": "folderActual",
  "baselineFolder": "/current/test/path/",
  "diffFolder": "folderDiff",
}
`;

exports[`utils > getInstanceData > should return instance data when the minimum of capabilities is provided 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "not_known",
  "devicePixelRatio": 1,
  "devicePlatformRect": {
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "deviceScreenSize": {
    "height": 0,
    "width": 0,
  },
  "isAndroid": false,
  "isIOS": false,
  "isMobile": false,
  "logName": "",
  "mobileViewportPosition": {
    "height": 0,
    "left": 0,
    "top": 0,
    "width": 0,
  },
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not-known",
}
`;

exports[`utils > getInstanceData > should return instance data when wdio-ics option log name is provided 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "not_known",
  "devicePixelRatio": 1,
  "devicePlatformRect": {
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "deviceScreenSize": {
    "height": 0,
    "width": 0,
  },
  "isAndroid": false,
  "isIOS": false,
  "isMobile": false,
  "logName": "wdio-ics-logName",
  "mobileViewportPosition": {
    "height": 0,
    "left": 0,
    "top": 0,
    "width": 0,
  },
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not-known",
}
`;

exports[`utils > getInstanceData > should return instance data when wdio-ics option name is provided 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "not_known",
  "devicePixelRatio": 1,
  "devicePlatformRect": {
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "deviceScreenSize": {
    "height": 0,
    "width": 0,
  },
  "isAndroid": false,
  "isIOS": false,
  "isMobile": false,
  "logName": "",
  "mobileViewportPosition": {
    "height": 0,
    "left": 0,
    "top": 0,
    "width": 0,
  },
  "name": "wdio-ics-name",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not-known",
}
`;
